--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -13,14 +13,6 @@
     color: #f5e9ff;
   }
 
-  /* Wallet Button */
-  #walletBar {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 50;
-  }
-
   #connect-wallet-btn {
     padding: 14px 22px;
     font-size: 1.05em;
@@ -45,146 +37,38 @@
     color: #caffff;
   }
 
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 120px 20px 60px;
-  }
-
-  .title {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
+  .container { max-width: 1200px; margin: 0 auto; padding: 120px 20px 60px; }
+  .title { text-align: center; margin-bottom: 30px; }
   .title img {
     max-width: 420px;
     width: 90%;
-    filter: drop-shadow(0 0 18px #bb33ff)
-            drop-shadow(0 0 36px #a020f0)
-            drop-shadow(0 0 64px #bb33ff);
+    filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff);
     animation: titleGlow 2.2s infinite ease-in-out;
   }
-
   @keyframes titleGlow {
     0%,100% {
-      filter: drop-shadow(0 0 18px #bb33ff)
-              drop-shadow(0 0 36px #a020f0)
-              drop-shadow(0 0 64px #bb33ff);
+      filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff);
     }
     50% {
-      filter: drop-shadow(0 0 30px #d175ff)
-              drop-shadow(0 0 60px #bb33ff)
-              drop-shadow(0 0 110px #d175ff);
+      filter: drop-shadow(0 0 30px #d175ff) drop-shadow(0 0 60px #bb33ff) drop-shadow(0 0 110px #d175ff);
     }
   }
 
-  .summary {
-    max-width: 780px;
-    margin: 0 auto 50px;
-    text-align: center;
-    line-height: 1.7;
-    font-size: 1.05em;
-    color: #dacafa;
-  }
-
-  .section {
-    background: #120c1f;
-    border: 2px solid #7a2bf8;
-    border-radius: 18px;
-    padding: 24px;
-    margin-bottom: 40px;
-    box-shadow: 0 0 24px rgba(122,43,248,0.35);
-  }
-
-  .section h2 {
-    margin-top: 0;
-    color: #e2c7ff;
-    text-shadow: 0 0 10px #bb33ff;
-  }
-
-  .nft-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 18px;
-  }
-
-  .nft-card {
-    background: #000;
-    border-radius: 14px;
-    border: 2px solid #453c2c;
-    padding: 12px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-
-  .nft-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 0 18px #bb33ff;
-  }
-
-  .nft-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 8px;
-  }
-
-  .preview {
-    text-align: center;
-  }
-
-  .preview img {
-    max-width: 260px;
-    border-radius: 18px;
-    border: 3px solid #bb33ff;
-    box-shadow: 0 0 28px rgba(187,51,255,0.6);
-  }
-
-  .loan-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 18px;
-  }
-
-  .loan-box {
-    background:#000;
-    border:2px solid #453c2c;
-    border-radius:14px;
-    padding:16px;
-    text-align:center;
-  }
-
-  .action-btn {
-    margin-top: 18px;
-    padding: 14px 28px;
-    border-radius: 12px;
-    border: none;
-    font-size: 1.05em;
-    font-weight: bold;
-    background: linear-gradient(135deg, #bb33ff, #892dff);
-    color: #fff;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
-    box-shadow: 0 0 22px rgba(187,51,255,0.45);
-  }
-
-  .action-btn:disabled {
-    opacity: 0.4;
-    cursor: not-allowed;
-  }
-
-  .action-btn img {
-    width: 28px;
-    height: 28px;
-  }
-
-  .countdown {
-    margin-top: 15px;
-    font-size: 1.1em;
-    color: #ffbfff;
-  }
+  .summary { max-width: 780px; margin: 0 auto 50px; text-align: center; line-height: 1.7; font-size: 1.05em; color: #dacafa; }
+  .section { background: #120c1f; border: 2px solid #7a2bf8; border-radius: 18px; padding: 24px; margin-bottom: 40px; box-shadow: 0 0 24px rgba(122,43,248,0.35); }
+  .section h2 { margin-top: 0; color: #e2c7ff; text-shadow: 0 0 10px #bb33ff; }
+  .nft-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 18px; }
+  .nft-card { background: #000; border-radius: 14px; border: 2px solid #453c2c; padding: 12px; text-align: center; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
+  .nft-card:hover { transform: translateY(-4px); box-shadow: 0 0 18px #bb33ff; }
+  .nft-card img { width: 100%; border-radius: 10px; margin-bottom: 8px; }
+  .preview { text-align: center; }
+  .preview img { max-width: 260px; border-radius: 18px; border: 3px solid #bb33ff; box-shadow: 0 0 28px rgba(187,51,255,0.6); }
+  .loan-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap: 18px; }
+  .loan-box { background:#000; border:2px solid #453c2c; border-radius:14px; padding:16px; text-align:center; }
+  .action-btn { margin-top: 18px; padding: 14px 28px; border-radius: 12px; border: none; font-size: 1.05em; font-weight: bold; background: linear-gradient(135deg, #bb33ff, #892dff); color: #fff; cursor: pointer; display: inline-flex; align-items: center; gap: 10px; box-shadow: 0 0 22px rgba(187,51,255,0.45); }
+  .action-btn:disabled { opacity: 0.4; cursor: not-allowed; }
+  .action-btn img { width: 28px; height: 28px; }
+  .countdown { margin-top: 15px; font-size: 1.1em; color: #ffbfff; }
 </style>
 </head>
 <body>
@@ -264,21 +148,9 @@ async function loadNFTs(wallet) {
       card.className = "nft-card";
 
       const img = document.createElement("img");
-
-      // Convert IPFS hash to HTTP URL if needed
-      if (nft.image && nft.image.startsWith("Qm")) {
-        img.src = `https://ipfs.io/ipfs/${nft.image}`;
-      } else {
-        img.src = nft.image || 'https://via.placeholder.com/160?text=No+Image';
-      }
-
+      img.src = nft.image;
       img.alt = nft.name;
       img.loading = "lazy";
-
-      img.onerror = () => {
-        img.onerror = null; 
-        img.src = 'https://via.placeholder.com/160?text=No+Image';
-      };
 
       const name = document.createElement("div");
       name.innerText = nft.name;
@@ -287,11 +159,7 @@ async function loadNFTs(wallet) {
       card.appendChild(name);
 
       card.onclick = () => {
-        if (nft.image && nft.image.startsWith("Qm")) {
-          document.getElementById("selectedNFT").src = `https://ipfs.io/ipfs/${nft.image}`;
-        } else {
-          document.getElementById("selectedNFT").src = nft.image || 'https://via.placeholder.com/260?text=No+Image';
-        }
+        document.getElementById("selectedNFT").src = nft.image;
         document.getElementById("lendBtn").disabled = false;
         window.selectedNFT = nft;
       };
@@ -337,3 +205,4 @@ document.getElementById("connect-wallet-btn").addEventListener("click", async ()
 
 </body>
 </html>
+
