--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -1172,7 +1172,7 @@
       <div class="stat-value" id="statFloor">--</div>
     </div>
     <div class="stat-card">
-      <div class="stat-label">Loan Amount</div>
+      <div class="stat-label">Loan Amount Available</div>
       <div class="stat-value" id="statLoanAmount">--</div>
     </div>
     <div class="stat-card">
@@ -1213,11 +1213,11 @@
       </button>
       <button class="collection-btn disabled" disabled>
         <span>🐻</span>
-        <span>Other Collection<span class="coming-soon-text"><br>Coming Soon</span></span>
+        <span>Vote your favorite Collection in soon!<span class="coming-soon-text"><br>Coming Soon</span></span>
       </button>
       <button class="collection-btn disabled" disabled>
         <span>🦊</span>
-        <span>Other Collection<span class="coming-soon-text"><br>Coming Soon</span></span>
+        <span>Vote your favorite Collection in soon!<span class="coming-soon-text"><br>Coming Soon</span></span>
       </button>
     </div>
 
