--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -1127,7 +1127,7 @@
         <p style="margin-bottom: 15px;">A: No, loans cannot be extended. You must repay within 14 days.</p>
         
         <p><strong>Q: What collections are supported?</strong></p>
-        <p style="margin-bottom: 15px;">A: Currently only Proton Pandas. More collections coming soon!</p>
+        <p style="margin-bottom: 15px;">A: Currently only Proton Pandas. More collections coming soon via governance vote!</p>
         
         <p><strong>Q: How is the floor price determined?</strong></p>
         <p style="margin-bottom: 0;">A: The floor price is set by the admin and updated periodically based on market conditions.</p>
@@ -1205,7 +1205,7 @@
       <div class="stat-value" id="statTotalLoans">--</div>
     </div>
     <div class="stat-card">
-      <div class="stat-label">Outstanding</div>
+      <div class="stat-label">Total Outstanding</div>
       <div class="stat-value" id="statOutstanding">--</div>
     </div>
     <div class="stat-card">
