--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -1201,15 +1201,15 @@
       <div class="stat-value" id="statLoanAmount">--</div>
     </div>
     <div class="stat-card">
-      <div class="stat-label">Total Loans</div>
+      <div class="stat-label">Total Loans - Lifetime Count</div>
       <div class="stat-value" id="statTotalLoans">--</div>
     </div>
     <div class="stat-card">
-      <div class="stat-label">Total Outstanding</div>
+      <div class="stat-label">Total Current Outstanding Loans</div>
       <div class="stat-value" id="statOutstanding">--</div>
     </div>
     <div class="stat-card">
-      <div class="stat-label">Total Burned</div>
+      <div class="stat-label">Total PDA Burned</div>
       <div class="stat-value red" id="statBurned">--</div>
     </div>
     <div class="stat-card">
