--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -1019,7 +1019,7 @@
   <div class="modal-content wide">
     <button class="close-btn" onclick="closeModal('docsModal')">×</button>
     <h2 style="color: #bb33ff; text-align: center;">📖 Panda Pawn Shop Documentation</h2>
-    <p style="text-align: center; color: #888;">Everything you need to know about NFT-backed PDA loans</p>
+    <p style="text-align: center; color: #888;">Everything you need to know about NFT backed PDA loans</p>
 
     <!-- How It Works -->
     <div class="docs-section">
