--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -1184,8 +1184,8 @@
   </div>
 
   <div class="summary">
-    Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
-    Repay your loan to get your NFT back — or default and the NFT goes to the vault.
+    Lock your Proton Pandas NFTs to access short term PDA liquidity.<br>
+    Repay your loan to get your NFT back or default and the NFT goes to the vault.
     <br><br>
     🐼 Small loans • ⏱ 14 Day terms • 🔥 60% of interest burned
   </div>
